--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,11 @@
     <meta property="og:description" content="Manage your finances with budgets, reports and more.">
     <meta property="og:image" content="/favicon.svg">
     <!-- Font Awesome icons loaded via menu.js -->
+    <style>
+      .fade-in {
+        opacity: 1;
+      }
+    </style>
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
     <div class="flex flex-col md:flex-row min-h-screen">
@@ -40,7 +45,7 @@
                 <p id="version" class="text-gray-500 mt-2 text-center">Version: loading...</p>
             </section>
 
-            <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
+            <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 opacity-0 transition-opacity duration-700">
                 <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
@@ -55,7 +60,7 @@
                 </div>
             </section>
 
-            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg">
+            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700">
                 <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <div class="flex items-start space-x-3">
@@ -137,5 +142,6 @@
     <script src="js/version.js"></script>
     <script src="js/input_help.js"></script>
     <script src="js/overlay.js"></script>
+    <script src="js/scroll_animations.js"></script>
   </body>
 </html>
