Initialize Tailwind dark mode config and theme toggle

--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -8,6 +8,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Monthly Statement</title>
+    <script>tailwind.config={darkMode:"class"}</script>
+
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
