--- a/frontend/ai_feedback.html
+++ b/frontend/ai_feedback.html
@@ -7,6 +7,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>AI Feedback</title>
+    <script>tailwind.config={darkMode:"class"}</script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome icons loaded via menu.js -->
 </head>
