--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -8,6 +8,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Manage Categories</title>
+    <script>tailwind.config={darkMode:"class"}</script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome icons loaded via menu.js -->
 </head>
