--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -7,6 +7,8 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>Palette Settings</title>
+  <script>tailwind.config={darkMode:"class"}</script>
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
