--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -7,7 +7,10 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>Palette Settings</title>
-  <script>tailwind.config={darkMode:"class"}</script>
+  <script>
+      window.tailwind = window.tailwind || {};
+      window.tailwind.config = { darkMode: "class" };
+  </script>
 
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
