--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,6 +143,28 @@
                 </div>
             </section>
 
+            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700">
+                <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">How Data Is Organised</h2>
+                <svg role="img" aria-label="Segments link to categories and tags while groups stand alone" class="mx-auto mb-4" width="360" height="120">
+                    <defs>
+                        <marker id="arrow" markerWidth="10" markerHeight="10" refX="8" refY="5" orient="auto">
+                            <path d="M0,0 L10,5 L0,10 z" fill="#4338ca"></path>
+                        </marker>
+                    </defs>
+                    <rect x="10" y="20" width="100" height="40" fill="#e0e7ff" stroke="#4338ca"></rect>
+                    <text x="60" y="45" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Segment</text>
+                    <rect x="130" y="20" width="100" height="40" fill="#e0e7ff" stroke="#4338ca"></rect>
+                    <text x="180" y="45" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Category</text>
+                    <rect x="250" y="20" width="100" height="40" fill="#e0e7ff" stroke="#4338ca"></rect>
+                    <text x="300" y="45" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Tag</text>
+                    <line x1="110" y1="40" x2="130" y2="40" stroke="#4338ca" stroke-width="2" marker-end="url(#arrow)"></line>
+                    <line x1="230" y1="40" x2="250" y2="40" stroke="#4338ca" stroke-width="2" marker-end="url(#arrow)"></line>
+                    <rect x="130" y="80" width="100" height="40" fill="#d1fae5" stroke="#047857" stroke-dasharray="4 2"></rect>
+                    <text x="180" y="105" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Group</text>
+                </svg>
+                <p class="text-gray-700">Segments contain categories, and each category holds tags that label your transactions. Groups operate separately from this chain and are perfect for collecting transactions for holidays or projects, letting you see their total cost independently.</p>
+            </section>
+
 
         </main>
     </div>
