--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -17,7 +17,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="any" href="/favicon.png">
     <!-- Icons provided by Font Awesome loaded via menu.js -->
     <!-- Custom fonts handled via Tailwind utility classes -->
 </head>
