--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,10 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="any" href="/favicon.png">
     <meta property="og:title" content="Finance Manager">
     <meta property="og:description" content="Manage your finances with budgets, reports and more.">
-    <meta property="og:image" content="/favicon.svg">
+    <meta property="og:image" content="/favicon.png">
     <!-- Font Awesome icons loaded via menu.js -->
     <style>
       .fade-in {
