--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -7,7 +7,7 @@
     <title>Group Dashboard</title>
     <script>
         window.tailwind = window.tailwind || {};
-        window.tailwind.config = { darkMode: "class" };
+        window.tailwind.config = {};
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
 
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-sans dark:from-gray-900 dark:to-gray-800 dark:text-gray-100">
+<body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
     <div class="flex min-h-screen">
-        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto dark:bg-gray-800 dark:border-gray-700"></nav>
+        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Group Dashboard</h1>
             <p class="mb-4">Review group spending by month and year to see how different areas of your budget change over time.</p>
@@ -26,13 +26,13 @@
             </label>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Monthly Totals</h2>
-            <div class="bg-white p-6 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div id="month-table"></div>
                 <div id="month-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of monthly totals for each group."></div>
             </div>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Yearly Totals</h2>
-            <div class="bg-white p-6 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div id="year-table"></div>
                 <div id="year-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of yearly totals for each group."></div>
             </div>
