--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Finance Manager</title>
     <script>
         window.tailwind = window.tailwind || {};
-        window.tailwind.config = { darkMode: "class" };
+        window.tailwind.config = {};
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -23,9 +23,9 @@
       }
     </style>
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter'] dark:from-gray-900 dark:to-gray-800 dark:text-gray-100">
+<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
     <div class="flex flex-col md:flex-row min-h-screen">
-        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow dark:bg-gray-800 dark:border-gray-700"></nav>
+        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <section class="mb-8" data-no-card="true">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -38,7 +38,7 @@
                         <div class="absolute inset-0 bg-indigo-700/60 flex flex-col items-center justify-center text-center p-6">
                             <h1 class="font-['Roboto'] text-3xl md:text-4xl font-semibold mb-4 text-white">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
                             <p class="text-indigo-100 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
-                            <a href="upload.html" class="inline-block bg-white text-indigo-700 px-4 py-2 rounded hover:bg-indigo-100 font-['Source_Sans_Pro'] font-light dark:bg-gray-700 dark:text-gray-100 dark:hover:bg-gray-600">Get Started</a>
+                            <a href="upload.html" class="inline-block bg-white text-indigo-700 px-4 py-2 rounded hover:bg-indigo-100 font-['Source_Sans_Pro'] font-light">Get Started</a>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow h-72 md:h-96">
@@ -52,15 +52,15 @@
             </section>
 
             <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 opacity-0 transition-opacity duration-700" data-no-card="true">
-                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg dark:bg-gray-800 dark:border-gray-700">
+                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
-                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg dark:bg-gray-800 dark:border-gray-700">
+                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-piggy-bank fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
-                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg dark:bg-gray-800 dark:border-gray-700">
+                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-wallet fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
