Revert "Configure Tailwind before loading CDN on project board"

--- a/frontend/projects_board.html
+++ b/frontend/projects_board.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Board</title>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <script>
-        window.tailwind = window.tailwind || {};
-        window.tailwind.config = { darkMode: 'class' };
-    </script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {};
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <!-- Font Awesome icons loaded via menu.js -->
     <style>
