--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -4,12 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Palette Settings</title>
-  <script>
-      window.tailwind = window.tailwind || {};
-      window.tailwind.config = {};
-  </script>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="dist/tailwind.css">
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
   <div class="flex min-h-screen">
