--- a/frontend/projects_board.html
+++ b/frontend/projects_board.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Board</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
+    <link rel="stylesheet" href="dist/tailwind.css">
         tailwind.config = {};
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
@@ -32,7 +31,6 @@
 
 <script src="js/menu.js"></script>
 <script src="js/input_help.js"></script>
-<script>
 function fmtMoney(v){
     return '£' + (parseFloat(v) || 0).toFixed(2);
 }
