--- a/frontend/project_add.html
+++ b/frontend/project_add.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Project</title>
+    <script>
+        window.tailwind = window.tailwind || {};
+        window.tailwind.config = {};
+    </script>
 
-    <link rel="stylesheet" href="dist/tailwind.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <!-- Font Awesome icons loaded via menu.js -->
     <style>
@@ -68,6 +72,7 @@
 
 <script src="js/menu.js"></script>
 <script src="js/input_help.js"></script>
+<script>
 async function loadProject(){
     const params = new URLSearchParams(location.search);
     const id = params.get('id');
