--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction Details</title>
+    <script>
+        window.tailwind = window.tailwind || {};
+        window.tailwind.config = {};
+    </script>
 
-    <link rel="stylesheet" href="dist/tailwind.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome icons loaded via menu.js -->
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
@@ -19,6 +23,7 @@
     </div>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
+    <script>
     const params = new URLSearchParams(window.location.search);
     const id = params.get('id');
     const container = document.getElementById('transaction-details');
