Refresh card styling with translucent gradient

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,15 +52,15 @@
             </section>
 
             <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 opacity-0 transition-opacity duration-700" data-no-card="true">
-                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
+                <div class="bg-white/70 p-6 rounded shadow border border-white/40 backdrop-blur-xl ring-1 ring-white/50 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
-                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
+                <div class="bg-white/70 p-6 rounded shadow border border-white/40 backdrop-blur-xl ring-1 ring-white/50 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-piggy-bank fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
-                <div class="bg-white p-6 rounded shadow border border-gray-300 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
+                <div class="bg-white/70 p-6 rounded shadow border border-white/40 backdrop-blur-xl ring-1 ring-white/50 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
                     <i class="fas fa-wallet fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
