--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -18,7 +18,7 @@
     <!-- Font Awesome icons loaded via menu.js -->
 
 </head>
-<body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white">
+<body class="bg-slate-50">
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto">
